fix: navbar / overflow

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -309,21 +309,6 @@ h3::after {
   background-size: 6rem;
 }
 
-.product-card .card-body::before {
-  content: "";
-  position: absolute;
-  left: 50%;
-  top: 10%;
-  width: 100%;
-  height: 100%;
-  /* background-image: url(../../assets/images/cup-hot-fill.svg); */
-  color: #fff;
-  background-repeat: no-repeat;
-  background-size: 8rem;
-  z-index: 0; /* Make sure the pseudo-element is behind the content */
-  filter: brightness(0) invert(1) opacity(0.02);
-}
-
 .product-card .card-body * {
   position: relative;
   z-index: 1; /* Ensure other content is above the pseudo-element */
